# codellamas

./: .gitignore  Plan on how to compare single vs multiagent approach.md  README.md  TASK_COMPLETE.txt  evaluate_exercises.py  evaluate_maven_execution.py  generate.json  generate_result.json  interactive_evaluator.py  latest_generate_result.json  package-lock.json  package.json  test_generation_payload.json  test_payload.json  test_review_payload.json  tsconfig.json  tsconfig.test.json
codellamas_backend/: .env.example  README.md  pyproject.toml
codellamas_backend/app/: api_models.py  logging_utils.py  main.py  settings.py
codellamas_backend/codellamas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
codellamas_backend/executor/: maven_runner.py  result_parser.py  workspace.py
codellamas_backend/llm/: crewai_llm.py  json_guard.py
codellamas_backend/orchestration/: crewai_agents.py  crewai_orchestrator.py  crewai_tasks.py  run_state.py  single_agent.py
codellamas_backend/prompts/: crew_debug.md  crew_problem.md  crew_review.md  crew_solution.md  crew_tests.md  single_agent_exercise.md
codellamas_backend/sample_output/p2/: review.md
codellamas_backend/sample_output/p3/: output.md
codellamas_backend/sample_output/phi4/p2/: problem_desc.md
codellamas_backend/sample_output/phi4/p3/: output.md
codellamas_backend/sample_output/phi4/p4/: output.md
codellamas_backend/scripts/: dev_run.sh
codellamas_backend/src/codellamas_backend/: api.py  crew.py  main.py
codellamas_backend/utils/: context_packer.py  file_patch.py
frontend/: .env  (+5 more)
(+113 files in other folders)
