[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codellamas_backend"
version = "0.1.0"
description = "codellamas_backend using crewAI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "httpx>=0.27.2",
  "python-dotenv>=1.0.1",

  # CrewAI orchestration
  "crewai>=0.70.0",

  # Ollama via LangChain (used as CrewAI LLM)
  "langchain-core>=0.2.0",
  "langchain-community>=0.2.0",
]

[tool.setuptools]
# this is the key line to avoid "flat-layout" ambiguity
packages = ["app", "llm", "orchestration", "executor", "utils"]